Fix font-display on mobile

--- a/content/themes/dude/sass/base/_helpers.scss
+++ b/content/themes/dude/sass/base/_helpers.scss
@@ -128,7 +128,7 @@
 @mixin fontFace($family, $src, $weight: normal, $style: normal) {
   @font-face {
     font-family: $family;
-    font-display: swap;
+    font-display: auto;
     src: url('#{$src}.eot');
     src: url('#{$src}.eot?#iefix') format('embedded-opentype'), url('#{$src}.woff') format('woff'), url('#{$src}.woff2') format('woff2'), url('#{$src}.ttf') format('truetype'), url('#{$src}.svg##{$family}') format('svg');
     font-style: $style;
